<resources>
    <string name="app_name">Triviapp</string>

    <!-- Log In & Sign Up -->
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="exception_empty_email">No email inputed!</string>
    <string name="exception_empty_password">No password inputed!</string>
    <string name="exception_weak_password">Password too weak!</string>
    <string name="exception_malformed_email">Malformed email address!</string>
    <string name="exception_user_already_exists">User already exists!</string>
    <string name="exception_invalid_email">Invalid email address!</string>
    <string name="exception_invalid_password">Invalid password!</string>
    <string name="ON_SAVE_INSTANCE_EMAIL">on_save_instance_email</string>
    <string name="ON_SAVE_INSTANCE_PASSWORD">on_save_instance_password</string>

    <!-- Quiz Activity -->
    <string name="next_question">Next Question</string>
    <string name="back_to_categories">Back to categories</string>

    <!-- Herror handling -->
    <string name="no_internet_connection">No internet connection!</string>

    <!-- Stats Activity -->
    <string name="statistics">Statistics</string>
    <string name="nbr_question_answered">Questions answered</string>
    <string name="nbr_correct_answers">Correct answers</string>
    <string name="nbr_incorrect_answers">Incorrect answers</string>
    <string name="Score">Score</string>

    <!-- Other -->
    <string name="simple_delimitor">Simple delimitor</string>
    <string name="picture_category">Picture of a category</string>
    <string name="logo_of_the_app">Logo of the app</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <!-- Widget -->
    <string name="widget_sign_in_sign_up">Sign in or Sign Up !</string>
    <string name="widget_score">Score</string>

</resources>
