<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal"
    android:id="@+id/widget"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_background"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/element_big_margin"
        android:background="@drawable/ic_triviapp"
        android:contentDescription="@string/simple_delimitor" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/widget_title"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/widget_score"
                    style="@style/Text"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorWhite"
                    android:elevation="4dp"
                    android:gravity="center"
                    android:background="@color/colorPrimary"
                    android:padding="8dp"/>
                <TextView
                    android:id="@+id/widget_score"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    style="@style/Text"
                    android:textColor="@color/colorWhite"
                    android:gravity="center"
                    android:background="@color/colorPrimary"
                    android:padding="8dp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/widget_sign_in_sign_out"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/widget_sign_in_sign_up"
                style="@style/Text"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:gravity="center"
                android:background="@color/colorPrimary"
                android:padding="8dp"
                android:visibility="gone"/>
        </FrameLayout>

</LinearLayout>